mesh/observability/virtual-service-monitoring.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: monitoring-virtualservice
  namespace: istio-system
spec:
  hosts:
  - "monitoring.ser.local"
  gateways:
  - "monitoring-gateway"
  http:
  - match:
    - uri:
        prefix: /grafana
    route:
    - destination:
        port:
          number: 3000
        host: "grafana"
  - match:
    - uri:
        prefix: /kiali
    route:
    - destination:
        port:
          number: 20001
        host: "kiali"
  - match:
    - uri:
        prefix: /prometheus
    route:
    - destination:
        port:
          number: 9090
        host: "prometheus"
